[profile.release]
opt-level = 3
debug = true 

[package]
name = "isera"
version = "0.1.0"
edition = "2021"
authors = ["Hugo Strappazzon, Mathieu Besançon"]
description = "A network simplex solver"
readme = "README.md"
homepage = "https://github.com/inria-ghost/isera"
repository = "https://github.com/inria-ghost/isera"
license = "Apache-2.0"
keywords = ["network-simplex", "optimization", "graphs", "combinatorial optimization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
itertools = "0.12.1"
num-traits = "0.2.18"
petgraph = "0.6.4"
rayon = "1.8.1"
time = "0.3.34"

[lib]
name = "isera"
path = "src/lib.rs"

[[bin]]
name = "isera"
path = "src/main.rs"
